<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>appng-authentication</artifactId>
	<packaging>jar</packaging>
	<name>appNG Authentication</name>
	<version>1.14.2-SNAPSHOT</version>
	<description>
		<![CDATA[Authentication Application]]>
	</description>
	<url>https://www.appng.org</url>
	<properties>
		<appNG.version>${project.parent.version}</appNG.version>
		<projectId>AUTH</projectId>
		<urlAlias>authentication</urlAlias>
		<displayName>Authentication</displayName>
		<longDescription>
			<![CDATA[This application provides several authentication mechanisms (Formular, NTML, Digest).]]>
		</longDescription>
		<asciidocPhase>deploy</asciidocPhase>
	</properties>
	<parent>
		<groupId>org.appng</groupId>
		<artifactId>appng-application-parent</artifactId>
		<version>1.24.5</version>
	</parent>
	<scm>
		<connection>scm:git:ssh://git@github.com:appNG/appng-authentication.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:appNG/appng-authentication.git</developerConnection>
		<url>https://github.com/appNG/appng-authentication</url>
	</scm>
	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<issueManagement>
		<system>JIRA</system>
		<url>https://appng.org/jira/projects/AUTH/</url>
	</issueManagement>
	<developers>
		<developer>
			<id>mherlitzius</id>
			<name>Matthias Herlitzius</name>
			<email>matthias.herlitzius at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
		<developer>
			<id>madness-inc</id>
			<name>Matthias Müller</name>
			<email>matthias.mueller at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
		<developer>
			<id>stuemke</id>
			<name>Claus Stümke</name>
			<email>claus.stuemke at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
	</developers>
	<profiles>
		<profile>
			<id>maven-central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>sonatype</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>sonatype</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<forkCount>1</forkCount>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>generate-docs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<additionalparam>-Xdoclint:all,-Xdoclint:-html</additionalparam>
					<sourcepath>src/main/java:target/generated-sources/constants</sourcepath>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.appng</groupId>
				<artifactId>appng-maven-plugin</artifactId>
				<version>${appNGVersion}</version>
				<executions>
					<execution>
						<id>applicationConstants</id>
						<goals>
							<goal>generateApplicationConstants</goal>
						</goals>
						<configuration>
							<filePath>application-home/application.xml</filePath>
							<targetClass>org.appng.application.authentication.AuthenticationSettings</targetClass>
							<outfolder>target/generated-sources/constants</outfolder>
						</configuration>
					</execution>
					<execution>
						<id>messageConstants</id>
						<goals>
							<goal>generateMessageConstants</goal>
						</goals>
						<configuration>
							<filePath>application-home/dictionary/authentication-messages.properties</filePath>
							<targetClass>org.appng.application.authentication.MessageConstants</targetClass>
							<outfolder>target/generated-sources/constants</outfolder>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.appng</groupId>
						<artifactId>appng-xmlapi</artifactId>
						<version>${appNG.version}</version>
					</dependency>
					<dependency>
						<groupId>jakarta.activation</groupId>
						<artifactId>jakarta.activation-api</artifactId>
						<version>1.2.2</version>
					</dependency>
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.3.1</version>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>2.3.5</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>target/generated-sources/constants</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.asciidoctor</groupId>
				<artifactId>asciidoctor-maven-plugin</artifactId>
				<version>2.2.2</version>
				<dependencies>
					<dependency>
						<groupId>org.asciidoctor</groupId>
						<artifactId>asciidoctorj-pdf</artifactId>
						<version>2.3.3</version>
					</dependency>
				</dependencies>
				<configuration>
					<attributes>
						<icons>font</icons>
						<pagenums />
						<toc />
						<toclevels>3</toclevels>
						<idprefix />
						<idseparator>-</idseparator>
						<numbered>true</numbered>
						<project-version>${project.version}</project-version>
						<project-name>${project.name}</project-name>
					</attributes>
				</configuration>
				<executions>
					<execution>
						<id>html</id>
						<phase>${asciidocPhase}</phase>
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<configuration>
							<backend>html5</backend>
							<outputDirectory>${project.build.directory}/generated-docs/html</outputDirectory>
							<sourceDocumentName>readme.adoc</sourceDocumentName>
							<attributes>
								<linkcss>true</linkcss>
								<icons>font</icons>
								<sectanchors>true</sectanchors>
								<stylesheet>appng.css</stylesheet>
							</attributes>
						</configuration>
					</execution>
					<execution>
						<id>pdf</id>
						<phase>${asciidocPhase}</phase>
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<configuration>
							<backend>pdf</backend>
							<sourceDocumentName>readme.adoc</sourceDocumentName>
							<outputDirectory>${project.build.directory}/generated-docs/pdf</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
		</dependency>
		<dependency>
			<groupId>org.appng</groupId>
			<artifactId>appng-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.appng</groupId>
			<artifactId>appng-search</artifactId>
		</dependency>
		<dependency>
			<groupId>org.appng</groupId>
			<artifactId>appng-testsupport</artifactId>
		</dependency>
		<dependency>
			<groupId>com.coveo</groupId>
			<artifactId>saml-client</artifactId>
			<version>4.1.2</version>
		</dependency>		
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.appng</groupId>
				<artifactId>appng-application-bom</artifactId>
				<type>pom</type>
				<scope>import</scope>
				<version>${appNG.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
